<?xml version="1.0" encoding="utf-8"?>

<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:cardview="http://schemas.android.com/apk/res-auto"
    android:id="@+id/pictureCard"
    android:layout_width="match_parent"
    android:layout_height="@dimen/height_cardview"
    cardview:cardCornerRadius="@dimen/cornerradius_cardview"
    android:layout_marginBottom="@dimen/activity_vertical_margin">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:background="@color/backgroundtext_card"
            >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/userImageCard"
                    android:layout_width="@dimen/dimen_circleimageprofile"
                    android:layout_height="@dimen/dimen_circleimageprofile"
                    android:src="@drawable/blank_user"
                    android:layout_gravity="left|top"
                    android:layout_marginTop="@dimen/margintop_circleimageprofile"
                    android:layout_marginLeft="@dimen/marginleft_circleimageprofile"
                    android:elevation="@dimen/elevation_circleimageprofile"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="@dimen/text_cardview_margin"
                    android:orientation="vertical"
                    >

                    <TextView
                        android:id="@+id/loginCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/login_card"
                        android:textColor="@android:color/black"
                        android:maxLines="@string/filename_maxlines"
                        android:layout_marginTop="@dimen/margintop_text"
                        android:textSize="@dimen/textsize_username_card"
                        />

                    <TextView
                        android:id="@+id/timeCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/timecard_card"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/firstword_textsize_card"
                        android:layout_marginTop="@dimen/margintop_text"
                        />

                    <TextView
                        android:id="@+id/descriptionCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/description_card"
                        android:textColor="@android:color/black"
                        android:maxLines="@string/maxlines_description"
                        android:textSize="@dimen/firstword_textsize_card"
                        android:layout_marginTop="@dimen/margintop_text"
                        />

                    <TextView
                        android:id="@+id/numCommentsCard"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/numbercomments_card"
                        android:textColor="@android:color/black"
                        android:textSize="@dimen/firstword_textsize_card"
                        android:layout_marginTop="@dimen/margintop_text"
                        />

                    <LinearLayout
                        android:id="@+id/fileContainer"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margintop_file"
                        >

                        <ImageView
                            android:layout_width="@dimen/iconfile_size"
                            android:layout_height="@dimen/iconfile_size"
                            android:background="@drawable/ic_black_file"
                            />

                        <TextView
                            android:id="@+id/fileName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/file_name"
                            android:textColor="@android:color/black"
                            android:textSize="@dimen/firstword_textsize_card"
                            android:textStyle="bold"
                            android:layout_marginTop="@dimen/margintop_text"
                            android:maxLines="@string/filename_maxlines"
                            />

                    </LinearLayout>

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>
    </FrameLayout>
</android.support.v7.widget.CardView>